game package updated